--- a/bboard/templates/bboard/by_rubric.html
+++ b/bboard/templates/bboard/by_rubric.html
@@ -10,9 +10,9 @@
     <h1>Reklamalar ro'yhati</h1>
     <h2>Bo'lim {{ current_rubric.name }}</h2>
     <div>
-        <a href="/bboard/">Asosiy Sahifa</a>
+        <a href="{% url 'index' %}">Asosiy Sahifa</a>
         {% for rubric in rubrics %}
-        <a href="/bboard/{{ rubric.pk }}">{{ rubric.name }}</a>
+        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
         {% endfor %}
     </div>
     {% for bb in bbs %}
