--- a/bboard/templates/bboard/index.html
+++ b/bboard/templates/bboard/index.html
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Asosiy sahifa</title>
-</head>
-<body>
-    <h1>Yangi Reklamalar</h1>
-    <div>
-        <a href="{% url 'index' %}">Asosiy Sahifa</a>
-        {% for rubric in rubrics %}
-        <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
-        {% endfor %}
-        <a href="{% url 'add' %}">Reklama Qo'shish</a>
-    </div>
-    {% for bb in bbs %}
-    <div>
-        <h2>{{ bb.title }}</h2>
-        <p>{{ bb.content }}</p>
-        <p><a href="/bboard/{{ bb.rubric.pk }}">{{ bb.rubric.name }}</a></p>
-        <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
-    </div>
-    {% endfor %}
-</body>
-</html>
+{% extends 'layout/base.html' %}
+
+{% block title %}Asosiy Sahifa{% endblock %}
+
+{% block content %}
+{% for bb in bbs %}
+<div>
+    <h2>{{ bb.title }}</h2>
+    <p>{{ bb.content }}</p>
+    <p><a href="{% url 'by_rubric' bb.rubric.pk %}">{{ bb.rubric.name }}</a></p>
+    <p>{{ bb.published|date:"d.m.Y H:i:s" }}</p>
+</div>
+{% endfor %}
+{% endblock %}
