--- a/bboard/templates/layout/base.html
+++ b/bboard/templates/layout/base.html
@@ -1,9 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'bboard/css/styles.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:600" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -12,14 +15,17 @@
     </header>
     <nav>
         <a href="{% url 'index' %}">Asosiy sahifa</a>
-        <a href="{% url 'add' %}">Qo'shish</a>
         {% for rubric in rubrics %}
         <a href="{% url 'by_rubric' rubric.pk %}">{{ rubric.name }}</a>
         {% endfor %}
+        <a href="{% url 'add' %}">Qo'shish</a>
     </nav>
     <section>
         {% block content %}
         {% endblock %}
     </section>    
+    <footer>
+        <p>&copy; 2021 Bekzod Raximov Python Django Developer.</p>
+    </footer>
 </body>
 </html>
